--- a/src/DocBlog/templates/DocBlog/index.html
+++ b/src/DocBlog/templates/DocBlog/index.html
@@ -1,14 +1,19 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Hello Man</title>
 </head>
 <body>
-    <h1>Welcome to {{first_name }}'s website</h1>
-    <span>Today is {{date| date:"d F Y"}}</span>
-    <p>It is a test website of Django's framework</p>
+    <div class="container">
+        <h1>Welcome to {{first_name }}'s website </h1>
+        <span>Today is {{date| date:"d F Y"}}</span>
+        <p>It is a test website of Django's framework</p>
+        <p> And it is {{date|date:"H\.i"}} </p>
+    </div>
 </body>
 </html>
